# ClaudeCodeOptimizer

./: .editorconfig  .gitignore  .gitleaksignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  AGENT_SKILL_ADEQUACY_ASSESSMENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONE.md  INIT_SYSTEM_ANALYSIS.md  INTEGRATION_COMPLETE.md  MANIFEST.in  OLD_TO_NEW_PRINCIPLE_MAPPING.md  PHASE_3_4_STATUS.md  PRINCIPLES.md  PRINCIPLE_UPDATE_PLAN.md  QUALITY_AUDIT.json  README.md  REFACTORING_SUMMARY.md  TODO.md  audit_results.json  install.ps1  install.sh  lefthook.yml  logging.yaml  package-lock.json  package.json  pyproject.toml  quick-install.py  release-please-config.json  setup.py  split_principles.py
.claude/: .cco-managed  project.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: cco-agent-analyze.md  cco-agent-apply.md  cco-agent-research.md
benchmark/: README.md  __main__.py  requirements.txt  start-ui.bat  start-ui.ps1  start-ui.sh
claudecodeoptimizer/: __init__.py  __main__.py  cco_remove.py  cco_status.py  cco_uninstall.py  commands_loader.py  config.py  install.py  install_hook.py  local.py  operations.py  ui.py
commands/: align.md  cco-align.md  cco-blueprint.md  cco-commit.md  cco-config.md  cco-docs.md  cco-optimize.md  cco-pr.md  cco-preflight.md  cco-research.md  cco-review.md  cco-status.md  cco-update.md  checkup.md  commit.md  config.md  docs.md  optimize.md  preflight.md  research.md  review.md  status.md  tune.md
rules/: c.md  (+42 more)
(+1005 files in other folders)
