[project]
name = "cco-plugin-tests"
version = "0.1.0"
description = "Tests for CCO Claude Code Plugin"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = ["benchmark/output", "node_modules", ".git", "__pycache__", "*.egg-info"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
